--- a/templates/page.html.erb
+++ b/templates/page.html.erb
@@ -37,6 +37,9 @@
     <div class="centered-content">
     <%= render_breadcrumbs(page) %>
     <h1><%= title %></h1>
+    <% unless page.last_modified.nil? %>
+    <time class="last-updated" datetime="<%= page.last_modified %>">Last updated <%= humanise_time(page.last_modified) %></time>
+    <% end %>
     <% if content.nil? %>
     <%= render_index(children) %>
     <% else %>
