--- a/templates/page.html.erb
+++ b/templates/page.html.erb
@@ -37,7 +37,7 @@
     <div class="centered-content">
     <%= render_breadcrumbs(page) %>
     <h1><%= title %></h1>
-    <% unless page.last_modified.nil? %>
+    <% unless page.is_index? || page.last_modified.nil? %>
     <time class="last-updated" datetime="<%= page.last_modified %>">Last updated <%= humanise_time(page.last_modified) %></time>
     <% end %>
     <% if content.nil? %>
