--- a/assets/site.css
+++ b/assets/site.css
@@ -35,19 +35,28 @@
 }
 
 html {
-  --theme-light-background-a: hsl(261, 50%, 85%);
-  --theme-light-background-b: hsl(0, 0%, 90%);
-  --theme-light-background-c: hsl(141, 92%, 90%);
-  --theme-light-text-a: hsl(261, 10%, 90%);
-  --theme-light-text-b: hsl(21, 10%, 90%);
-  --theme-light-text-c: hsl(141, 10%, 90%);
-  --theme-dark-text-a: hsl(261, 10%, 10%);
-  --theme-dark-text-b: hsl(261, 10%, 20%);
-  --theme-dark-background-a: hsl(261, 92%, 25%);
-  --theme-dark-background-b: hsl(15, 92%, 25%);
-  --theme-dark-background-c: hsl(141, 92%, 25%);
-  --theme-link: hsl(15, 100%, 30%);
-  --theme-highlight: hsl(261, 92%, 90%);
+  --oxford-blue: hsla(215, 61%, 16%, 1);
+  --bittersweet: hsla(6, 92%, 67%, 1);
+  --blue: hsla(174, 30%, 80%, 1);
+  --platinum: hsla(174, 11%, 85%, 1);
+  --khaki: hsla(29, 17%, 75%, 1);
+  --white: hsla(0, 0%, 100%, 1);
+  --black: #2a2a2a;
+  --dark-grey: #3a3a3a;
+  --dark-blue: hsla(230, 100%, 40%, 1);
+
+  --palette-a: var(--oxford-blue);
+  --palette-b: var(--platinum);
+  --palette-c: var(--blue);
+  --palette-d: var(--khaki);
+  --palette-a-text: var(--platinum);
+  --palette-b-text: var(--black);
+  --palette-b-secondary-text: var(--dark-grey);
+  --palette-c-text: var(--black);
+  --palette-c-secondary-text: var(--dark-grey);
+  --palette-d-text: var(--black);
+  --palette-d-secondary-text: var(--dark-grey);
+  --theme-link: var(--dark-blue);
   --theme-scrollbar: rgba(113, 113, 113, 0.5);
 
   --font-size-small: 1rem;           /* 16px */
@@ -81,27 +90,22 @@ html {
 }
 
 body {
-  background-color: var(--theme-light-background-b);
-  color: var(--theme-dark-text-a);
+  background-color: var(--palette-b);
+  color: var(--palette-b-text);
 }
 
-header {
-  background-color: var(--theme-dark-background-b);
-  color: var(--theme-light-text-b);
-}
-
-.optional-sidebar-layout > nav {
-  color: var(--theme-light-text-b);
-  background-color: var(--theme-dark-background-b);
+header, .optional-sidebar-layout > nav {
+  background-color: var(--palette-a);
+  color: var(--palette-a-text);
 }
 
 .optional-sidebar-layout > article {
-  background-color: var(--theme-light-background-b);
-  color: var(--theme-dark-text-a);
+  background-color: var(--palette-b);
+  color: var(--palette-b-text);
 }
 
 h1 + .last-updated {
-  color: var(--theme-dark-text-b);
+  color: var(--palette-b-secondary-text);
 }
 
 article a {
@@ -109,29 +113,30 @@ article a {
 }
 
 .skip-link {
-  color: var(--theme-light-background-1);
-  background-color: var(--theme-dark-background-1);
+  color: var(--platinum);
+  background-color: var(--oxford-blue);
 }
 
 header nav a {
-  color: var(--theme-light-text-a);
+  color: var(--palette-a-text);
 }
 
 #sidebar-nav a {
-  color: var(--theme-light-text-a);
+  color: var(--palette-a-text);
 }
 
 tbody tr:nth-child(odd) {
-  background-color: var(--theme-light-background-b);
+  background-color: var(--palette-b);
 }
 
 thead, tbody tr:nth-child(even) {
-  background-color: var(--theme-light-background-c);
+  background-color: var(--palette-c);
+  color: var(--palette-c-text);
 }
 
 .card, .card a {
-  color: var(--theme-light-text-c);
-  background-color: var(--theme-dark-background-c);
+  background-color: var(--palette-d);
+  color: var(--palette-d-text);
 }
 
 
@@ -458,7 +463,7 @@ nav .horizontal-list a {
 .token.constant,
 .token.symbol,
 .token.deleted {
-  color: #f92672;
+  color: hsl(338, 100%, 80%);
 }
 
 .token.boolean,
