Redo the side nav
Show sibling pages and child pages

--- a/templates/nav_section.html.erb
+++ b/templates/nav_section.html.erb
@@ -1,16 +1,12 @@
 <% unless page.nil? %>
-  <% if level == max_level %>
-  <li><%= link_page(page) %></li>
-  <% else %>
-  <%= header_tag(level) { link_page(page) } %>
+  <% page.parent.children.each do |sibling| %>
+  <%= header_tag(2) { link_page(sibling) } %>
+  <% if sibling == page && page.is_index? %>
   <ul class="navigation-list">
-    <% if page.is_index? %>
     <% page.children.each do |nav_entry| %>
     <li><%= link_page(nav_entry) %></li>
     <% end %>
-    <% else %>
-    <li><%= render_nav(page.children, level: level + 1, max_level: max_level) %></li>
-    <% end %>
   </ul>
+  <% end %>
   <% end %>
 <% end %>
