--- a/templates/page.html.erb
+++ b/templates/page.html.erb
@@ -48,7 +48,7 @@
     </div>
   </article>
   <nav id="sidebar-nav" aria-label="Site navigation">
-    <%= render_nav(navigation_root, max_level: 2) %>
+    <%= render_nav(navigation_root) %>
   </nav>
  </div>
  </body>
