Restyle code blocks
- Use a light colour scheme, so it doesn't stand out from the rest of the article
- Use rounded borders on both code blocks and tables for consistency
- Use a highlight rather than a border on inline code blocks, so it doesn't distract
  too much from the surrounding text

--- a/templates/page.html.erb
+++ b/templates/page.html.erb
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="<%= meta_description %>">
   <link rel="stylesheet" type="text/css" href="/assets/site.css">
+  <link rel="stylesheet" type="text/css" href="/assets/syntax.css">
   <script src="/assets/prism.js" defer></script>
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
