--- a/assets/site.css
+++ b/assets/site.css
@@ -23,20 +23,21 @@
   src: url("./Inconsolata/inconsolata-latin-ext.woff2") format('woff2');
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
+
 /* latin */
 @font-face {
   font-family: 'Inconsolata';
   font-style: normal;
   font-weight: 400;
   font-stretch: 100%;
-  font-variation-settings: "wdth" 115;;
+  font-variation-settings: "wdth" 115;
+    ;
   src: url("./Inconsolata/inconsolata-latin.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 html {
   --oxford-blue: hsla(215, 61%, 16%, 1);
-  --bittersweet: hsla(6, 92%, 67%, 1);
   --blue: hsla(174, 30%, 80%, 1);
   --platinum: hsla(174, 11%, 85%, 1);
   --khaki: hsla(29, 17%, 75%, 1);
@@ -59,12 +60,18 @@ html {
   --theme-link: var(--dark-blue);
   --theme-scrollbar: rgba(113, 113, 113, 0.5);
 
-  --font-size-small: 1rem;           /* 16px */
-  --font-size-smallish: 1.125rem;    /* 18px */
-  --font-size-medium: 1.25rem;       /* 20px */
-  --font-size-quite-big: 1.5rem;     /* 24px */
-  --font-size-big: 2rem;             /* 32px */
-  --font-size-very-big: 2.5rem;      /* 40px */
+  --font-size-small: 1rem;
+    /* 16px */
+    --font-size-smallish: 1.125rem;
+    /* 18px */
+    --font-size-medium: 1.25rem;
+    /* 20px */
+    --font-size-quite-big: 1.5rem;
+    /* 24px */
+    --font-size-big: 2rem;
+    /* 32px */
+    --font-size-very-big: 2.5rem;
+    /* 40px */
 
   --standard-line-height: 1.5;
 
@@ -75,11 +82,13 @@ html {
   --spacing-5: 1.25rem;
   --spacing-6: 1.5rem;
 
+  --border-radius-1: 0.3em;
 
   /*
     Vertical spacings that are aligned with the body line height
   */
-  --vertical-space-0: calc(var(--font-size-medium) * var(--standard-line-height) * 0.5);
+  --vertical-space-one-quarter: calc(var(--font-size-medium) * var(--standard-line-height) * 0.25);
+    --vertical-space-one-half: calc(var(--font-size-medium) * var(--standard-line-height) * 0.5);
   --vertical-space-1: calc(var(--font-size-medium) * var(--standard-line-height) * 1);
   --vertical-space-2: calc(var(--font-size-medium) * var(--standard-line-height) * 2);
   --vertical-space-3: calc(var(--font-size-medium) * var(--standard-line-height) * 3);
@@ -94,7 +103,8 @@ body {
   color: var(--palette-b-text);
 }
 
-header, .optional-sidebar-layout > nav {
+header,
+.optional-sidebar-layout>nav {
   background-color: var(--palette-a);
   color: var(--palette-a-text);
 }
@@ -143,16 +153,13 @@ thead, tbody tr:nth-child(even) {
 body {
   font-size: var(--font-size-medium);
   font-family: 'Literata', serif;
-  line-height: var(--standard-line-height); /* 30px */
+  line-height: var(--standard-line-height);
   padding: 0;
   margin: 0;
 }
 
 code {
   font-family: 'Source Code Pro', monospace;
-  color: #f8f8f2;
-  background: #272822;
-  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
   text-align: left;
   white-space: pre;
   word-spacing: normal;
@@ -168,23 +175,35 @@ code {
   margin-bottom: 0;
 }
 
- /* Code blocks */
- pre {
+pre,
+table {
+  border-radius: 0.3em;
+  border: 2px solid var(--dark-grey);
+}
+/* Code blocks */
+pre {
   padding: 1em;
   overflow: auto;
-  border-radius: 0.3em;
-  background: #272822;
 }
 
-pre code {
+pre,
+code {
+  background: var(--palette-b);
+  color: var(--black);
+  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+}
+
+pre>code {
   font-size: var(--font-size-smallish);
 }
 
 /* Inline code */
 :not(pre) > code {
-  padding-inline: .5em;
+  padding-inline: .3em;
+    margin-inline: .2em;
   border-radius: .3em;
   white-space: normal;
+  background-color: #e4c6ac;
 }
 
 /*
@@ -200,21 +219,30 @@ article li {
   margin-bottom: 0.5lh;
 }
 
-html { height: 100%;}
+html {
+  height: 100%;
+}
 
 p {
   overflow-wrap: break-word;
   hyphens: auto;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: bold;
   margin-top: 0;
-  margin-bottom: var(--vertical-space-0);
+  margin-bottom: var(--vertical-space-one-quarter);
 }
 
 h1 {
+  font-weight: bold;
+    margin-top: 0;
   font-size: var(--font-size-very-big);
+  margin-bottom: var(--vertical-space-one-half);
 }
 
 h2 {
@@ -302,7 +330,7 @@ nav {
   -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
 }
 
-body >  {
+body> {
   position: relative;
   max-width: 40rem;
   margin: auto;
@@ -361,7 +389,7 @@ nav .horizontal-list a {
 
 .skip-link:focus {
   position: static;
-  top:0;
+  top: 0;
   left: 0;
   opacity: 1;
 }
@@ -444,6 +472,8 @@ nav .horizontal-list a {
 
 .card {
   text-align: center;
+  border-radius: var(--border-radius-1);
+    border: 2px solid var(--dark-grey);
 }
 
 .card :last-child {
@@ -462,108 +492,79 @@ nav .horizontal-list a {
   display: inline;
 }
 
-.comma-seperated-list li:not(:last-child)::after{
+.comma-seperated-list li:not(:last-child)::after {
   content: ",";
 }
 
-.comma-seperated-list-truncated li:last-child::after{
+.comma-seperated-list-truncated li:last-child::after {
   content: "…";
 }
 
-/* Prism syntax highlighting tokens */
-.token.comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
-  color: #8292a2;
-}
-
-.token.punctuation {
-  color: #f8f8f2;
-}
-
-.token.namespace {
-  opacity: .7;
-}
-
-.token.property,
-.token.tag,
-.token.constant,
-.token.symbol,
-.token.deleted {
-  color: hsl(338, 100%, 80%);
-}
-
-.token.boolean,
-.token.number {
-  color: #ae81ff;
-}
-
-.token.selector,
-.token.attr-name,
-.token.string,
-.token.char,
-.token.builtin,
-.token.inserted {
-  color: #a6e22e;
-}
-
-.token.operator,
-.token.entity,
-.token.url,
-.language-css .token.string,
-.style .token.string,
-.token.variable {
-  color: #f8f8f2;
-}
-
-.token.atrule,
-.token.attr-value,
-.token.function,
-.token.class-name {
-  color: #e6db74;
-}
-
-.token.keyword {
-  color: #66d9ef;
-}
-
-.token.regex,
-.token.important {
-  color: #fd971f;
-}
-
-.token.important,
-.token.bold {
-  font-weight: bold;
-}
-.token.italic {
-  font-style: italic;
-}
-
-.token.entity {
-  cursor: help;
-}
-
 table {
-  table-layout: fixed;
   width: 100%;
-  border-collapse: collapse;
-  border: 3px solid black;
+  border-collapse: separate;
+  border-spacing: 0;
+  border-width: 0;
 }
 
-th, td {
-  border-inline: 2px solid black;
+        th:not([scope="row"]):first-child {
+          border-top-left-radius: var(--border-radius-1);
+        }
+
+        th:not([scope="row"]):last-child {
+          border-top-right-radius: var(--border-radius-1);
+        }
+
+        tr:last-child>td:first-child,
+        tr:last-child>th[scope="row"]:first-child {
+          border-bottom-left-radius: var(--border-radius-1);
+        }
+
+        tr:last-child>td:last-child {
+          border-bottom-right-radius: var(--border-radius-1);
+        }
+
+        th {
+          border-top: none;
+        }
+
+        th:not([scope="row"]) {
+          border-top: 2px solid var(--dark-grey);
+        }
+
+        td:first-child,
+        th:first-child {
+          border-left: 2px solid var(--dark-grey);
+        }
+
+        td:last-child,
+        th:last-child {
+          border-right: 2px solid var(--dark-grey);
+        }
+
+        tr:last-child>td,
+        tr:last-child>th[scope="row"] {
+          border-bottom: 2px solid var(--dark-grey);
+}
+
+th,
+td {
   padding-inline: var(--spacing-3);
   padding-block: var(--spacing-1);
+  border-left: solid black 1px;
+  }
+  
+  td,
+  th[scope="row"] {
+    border-top: solid black 1px;
 }
 
 tr {
-  margin-block: var(--spacing-0);
+  margin-bottom: 0;
 }
 
-thead, tfoot, tr {
-  border: 1px solid black;
+td {
+  margin-bottom: 0;
 }
 
 thead {
