--- a/assets/site.css
+++ b/assets/site.css
@@ -40,6 +40,7 @@ html {
   --oxford-blue: hsla(215, 61%, 16%, 1);
   --blue: hsla(174, 30%, 80%, 1);
   --platinum: hsla(174, 11%, 85%, 1);
+  --platinum-light: hsla(174, 11%, 90%, 1);
   --khaki: hsla(29, 17%, 75%, 1);
   --white: hsla(0, 0%, 100%, 1);
   --black: #2a2a2a;
@@ -188,7 +189,7 @@ pre {
 
 pre,
 code {
-  background: var(--palette-b);
+  background: var(--platinum-light);
   color: var(--black);
   text-shadow: 0 1px rgba(0, 0, 0, 0.1);
 }
